# VideoToTranscript

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VideoToTranscript.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
scripts/: build-app.sh
src/: __init__.py  main.py
src/exporters/: __init__.py  json_exporter.py  srt_exporter.py  txt_exporter.py  vtt_exporter.py
src/models/: __init__.py  video_item.py
src/services/: __init__.py  audio_extractor.py  model_manager.py  transcription_worker.py
src/ui/: __init__.py  main_window.py  transcript_panel.py  video_list_widget.py
